# final_prueba_scrapeo

./: README.md  pyproject.toml
data/: movies_400.csv  movies_480.csv  movies_total.csv
data/cleaned/: detalles_artistas.csv  detalles_peliculas.csv  pelicula_artista.csv  peliculas.csv
notebooks/: 1_extraction_moviesdb.ipynb  2_extraction_movies_imdb_scrape.ipynb  3_limpieza_datos.ipynb  4_creacion_tablas.ipynb  5_sistema_recomendacion.ipynb
notes/: notes
src/: soporte_eda.py  soporte_sistemas_recomendacion.py
