[project]
name = "prueba-tecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "tqdm>=4.67.1",
]
