[project]
name = "prueba-tecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "contractions>=0.1.73",
    "emoji>=2.14.0",
    "emoji-extractor>=2.1.2",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "selenium>=4.27.1",
    "spacy>=3.8.3",
    "statsmodels>=0.14.4",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.0",
]
